Fix extra space in mobile version

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
     display: grid;
     grid-template-rows: repeat( 6, 100vh) 500px;
     width: 100%;
+    height: 100%;
     overflow-x: hidden;
     direction: ltr;
     margin: 0px;
